test: fix BDDTest