@@ -48,14 +48,15 @@ import com.example.woowa.restaurant.restaurant.dto.request.RestaurantCreateReque
 import com.example.woowa.restaurant.restaurant.dto.response.RestaurantCreateResponse;
 import com.example.woowa.restaurant.restaurant.dto.response.RestaurantFindResponse;
 import com.example.woowa.restaurant.restaurant.service.RestaurantService;
-import com.example.woowa.security.repository.RoleRepository;
-import com.example.woowa.security.user.Role;
-import com.example.woowa.security.user.UserRole;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
+
+import com.example.woowa.security.role.entity.Role;
+import com.example.woowa.security.role.repository.RoleRepository;
+import com.example.woowa.security.user.entity.UserRole;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.MethodOrderer.OrderAnnotation;
 import org.junit.jupiter.api.Order;
@@ -170,11 +171,11 @@ public class BDDTest {
         List<OwnerFindResponse> owners = ownerService.findOwners();
         List<Long> categoryIds = categoryService.findCategories().stream()
             .map(CategoryFindResponse::getId).collect(Collectors.toList());
-        RestaurantCreateRequest restaurantCreateRequest = new RestaurantCreateRequest("한식",
+        RestaurantCreateRequest restaurantCreateRequest = new RestaurantCreateRequest("test 가게",
             "760-15-00993", LocalTime.now(), LocalTime.now().plusHours(5), true, "010-1111-1234",
             "테스트용 가게", "서울특별시 동작구 상도동", categoryIds);
         restaurant = restaurantService.createRestaurantByOwnerId(
-            owners.get(0).getId(), restaurantCreateRequest);
+            owners.getFirst().getId(), restaurantCreateRequest);
     }
 
     @Test
@@ -182,7 +183,7 @@ public class BDDTest {
     @Order(4)
     void _4() {
         List<RestaurantFindResponse> restauransNotPermitted = restaurantService.findRestaurantsIsPermittedIsFalse();
-        Long newRestaurant = restauransNotPermitted.get(0).getId();
+        Long newRestaurant = restauransNotPermitted.getFirst().getId();
         adminService.permitRestaurant(newRestaurant);
     }
 
@@ -190,8 +191,8 @@ public class BDDTest {
     @DisplayName("어드민이 광고 상품을 등록한다")
     @Order(5)
     void _5() {
-        AdvertisementCreateRequest ultraCall = new AdvertisementCreateRequest("울트라콜",
-            UnitType.MOTHLY.getType(), RateType.FLAT.getType(), 88000, "울트라콜 광고", 10);
+        AdvertisementCreateRequest ultraCall = new AdvertisementCreateRequest("울트라콜1",
+            UnitType.MONTHLY.getType(), RateType.FLAT.getType(), 88000, "울트라콜 광고", 10);
         AdvertisementCreateRequest openList = new AdvertisementCreateRequest("오픈리스트",
             UnitType.PER_ORDER.getType(), RateType.PERCENT.getType(), 10, "오픈리스트 광고", 10);
         advertisementService.createAdvertisement(ultraCall);
@@ -223,7 +224,7 @@ public class BDDTest {
     void _8() {
         CustomerAddressCreateRequest customerAddressCreateRequest = new CustomerAddressCreateRequest(
             "서울특별시 동작구 상도동", "빌라 101호", "집");
-        CustomerCreateRequest customerCreateRequest = new CustomerCreateRequest("dev12",
+        CustomerCreateRequest customerCreateRequest = new CustomerCreateRequest("cus12",
             "Programmers123!", "2000-01-01", customerAddressCreateRequest);
         customer = customerService.createCustomer(
             customerCreateRequest);
@@ -233,7 +234,7 @@ public class BDDTest {
     @DisplayName("고객은 고객 등급에 따라 정기 쿠폰을 얻을 수 있다.")
     @Order(9)
     void _9() {
-        voucherService.registerMonthlyVoucher("dev12");
+        voucherService.registerMonthlyVoucher("cus12");
     }
 
     @Test
@@ -249,6 +250,7 @@ public class BDDTest {
     @DisplayName("사장은 가게에 메뉴를 추가할 수 있다.")
     @Order(11)
     void _11() {
+        System.out.println("menuGroupId : " + menuGroupId);
         MenuSaveRequest request = new MenuSaveRequest(menuGroupId, "참치 김밥", "맛있는 참치 김밥입니다.",
             4500);
         menuId = menuService.addMenu(request);
@@ -276,7 +278,7 @@ public class BDDTest {
             customer.getLoginId());
         CartSaveRequest cartSaveRequest = new CartSaveRequest(menuId, 3);
         OrderSaveRequest orderSaveRequest = new OrderSaveRequest(customer.getLoginId(),
-            restaurant.getId(), vouchers.get(0).getId(), 0,
+            restaurant.getId(), vouchers.getFirst().getId(), 0,
             PaymentType.CREDIT_CARD, "서울특별시 동작구 상도동", Collections.singletonList(cartSaveRequest)
         );
 
@@ -413,7 +415,7 @@ public class BDDTest {
     @Order(29)
     void _29() {
         ReviewCreateRequest reviewCreateRequest = new ReviewCreateRequest("정말정말 맛있습니다.", 5);
-        reviewService.createReview("dev12", orderId,
+        reviewService.createReview("cus12", orderId,
             reviewCreateRequest);
     }
 
@@ -421,6 +423,6 @@ public class BDDTest {
     @DisplayName("고객은 가게 리뷰를 조회할 수 있다.")
     @Order(30)
     void _30() {
-        List<ReviewFindResponse> result = reviewService.findUserReview("dev12");
+        List<ReviewFindResponse> result = reviewService.findUserReview("cus12");
     }
 }
